docs: 环境实测订正与文档漂移修正